# fsdl-text-recognizer-2022-labs

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  CHANGELOG.md  Makefile  add_markers.py  environment.yml  overview.ipynb  pyproject.toml  readme.md  setup.cfg
.changelog/: template.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: this-repository-is-automatically-generated--don-t-open-issues-here-.md
.github/workflows/: codeql-analysis.yml  main.yaml
data/: README.md
data/raw/fsdl_handwriting/: labelstudio_settings.py  manifest.csv
data/raw/iam/: readme.md
docs/: detect_secrets.md  getting_started.md  lambda_labs_setup.md  project_specific_setup.md  quickstart.md  updating_requirements.md  using_poetry.md  using_towncrier.md
lab01/notebooks/: lab01_pytorch.ipynb
lab01/text_recognizer/: util.py
lab01/text_recognizer/data/: util.py
lab01/text_recognizer/metadata/: mnist.py
lab01/text_recognizer/models/: __init__.py  mlp.py
lab02/notebooks/: lab01_pytorch.ipynb  lab02a_lightning.ipynb  lab02b_cnn.ipynb
lab02/text_recognizer/: util.py
lab02/text_recognizer/callbacks/: __init__.py
lab02/text_recognizer/data/: __init__.py  base_data_module.py  emnist.py  emnist_essentials.json  emnist_lines.py  sentence_generator.py  util.py
lab02/text_recognizer/lit_models/: __init__.py  base.py
lab02/text_recognizer/metadata/: emnist_lines.py  shared.py
lab02/text_recognizer/models/: __init__.py  cnn.py  line_cnn_simple.py  mlp.py
lab02/text_recognizer/stems/: base.py  image.py  line.py  mnist.py
lab02/training/: run_experiment.py
lab03/notebooks/: lab01_pytorch.ipynb  lab02a_lightning.ipynb  lab02b_cnn.ipynb  lab03_transformers.ipynb
lab03/text_recognizer/data/: __init__.py  base_data_module.py  emnist.py  iam.py  iam_paragraphs.py  mnist.py  util.py
lab03/text_recognizer/lit_models/: base.py  metrics.py  transformer.py
lab03/text_recognizer/metadata/: emnist.py  iam.py  iam_paragraphs.py
lab03/text_recognizer/models/: __init__.py  line_cnn_simple.py  resnet_transformer.py  transformer_util.py
lab03/text_recognizer/stems/: paragraph.py
lab03/training/: run_experiment.py
lab04/notebooks/: lab02a_lightning.ipynb  lab02b_cnn.ipynb  lab04_experiments.ipynb
lab04/text_recognizer/: util.py
lab04/text_recognizer/callbacks/: __init__.py  model.py
lab04/text_recognizer/data/: __init__.py  emnist.py  iam.py  iam_lines.py  mnist.py  util.py
lab04/text_recognizer/lit_models/: __init__.py  base.py  util.py
lab04/text_recognizer/metadata/: iam_lines.py  iam_paragraphs.py
lab04/text_recognizer/models/: __init__.py  line_cnn_transformer.py  mlp.py  resnet_transformer.py  transformer_util.py
lab04/text_recognizer/stems/: line.py  paragraph.py
lab04/training/: run_experiment.py
lab05/: .flake8  .pre-commit-config.yaml
lab05/notebooks/: lab01_pytorch.ipynb  lab02b_cnn.ipynb  lab04_experiments.ipynb  lab05_troubleshooting.ipynb
lab05/text_recognizer/: util.py
lab05/text_recognizer/callbacks/: __init__.py  imtotext.py  model.py  optim.py  util.py
lab05/text_recognizer/data/: __init__.py  base_data_module.py  emnist.py  emnist_lines.py  fake_images.py  iam.py  iam_lines.py  iam_paragraphs.py  mnist.py  sentence_generator.py  util.py
lab05/text_recognizer/lit_models/: __init__.py  base.py  transformer.py  util.py
lab05/text_recognizer/metadata/: emnist.py  emnist_lines.py  iam.py  iam_lines.py  iam_paragraphs.py  mnist.py  shared.py
lab05/text_recognizer/models/: line_cnn.py  line_cnn_transformer.py  mlp.py  resnet_transformer.py  transformer_util.py
lab05/text_recognizer/stems/: line.py  paragraph.py
lab05/text_recognizer/tests/: test_callback_utils.py
lab05/training/: run_experiment.py  util.py
lab05/training/tests/: test_memorize_iam.sh
lab06/: .pre-commit-config.yaml
lab06/.github/workflows/: pre-commit.yml
lab06/notebooks/: lab02b_cnn.ipynb  lab04_experiments.ipynb  lab05_troubleshooting.ipynb  lab06_data.ipynb
lab06/tasks/: lint.sh
lab06/text_recognizer/callbacks/: __init__.py  util.py
lab06/text_recognizer/data/: __init__.py  emnist_lines.py  fake_images.py  iam_lines.py  iam_original_and_synthetic_paragraphs.py  iam_paragraphs.py  iam_synthetic_paragraphs.py  mnist.py  sentence_generator.py
lab06/text_recognizer/lit_models/: base.py  metrics.py
lab06/text_recognizer/metadata/: iam_synthetic_paragraphs.py
lab06/text_recognizer/models/: cnn.py  line_cnn.py  line_cnn_transformer.py  transformer_util.py
lab06/text_recognizer/stems/: line.py  paragraph.py
lab06/text_recognizer/tests/: test_callback_utils.py
lab06/training/: run_experiment.py  util.py
lab07/: .flake8
lab07/api_serverless/: Dockerfile  __init__.py  api.py
lab07/app_gradio/: Dockerfile  README.md  app.py
lab07/app_gradio/tests/: test_app.py
lab07/notebooks/: lab02a_lightning.ipynb  lab04_experiments.ipynb  lab06_data.ipynb  lab07_deployment.ipynb
lab07/text_recognizer/: __init__.py  paragraph_text_recognizer.py  util.py
lab07/text_recognizer/callbacks/: model.py  util.py
lab07/text_recognizer/data/: base_data_module.py  emnist.py  emnist_lines.py  fake_images.py  iam.py  iam_lines.py  iam_original_and_synthetic_paragraphs.py  iam_paragraphs.py  iam_synthetic_paragraphs.py
lab07/text_recognizer/lit_models/: metrics.py  transformer.py
lab07/text_recognizer/metadata/: emnist.py  iam.py  iam_paragraphs.py
lab07/text_recognizer/models/: __init__.py  cnn.py  line_cnn_transformer.py  resnet_transformer.py
lab07/training/: cleanup_artifacts.py  run_experiment.py  stage_model.py
lab08/: .flake8
lab08/api_serverless/: Dockerfile
lab08/app_gradio/: Dockerfile  app.py  flagging.py  s3_util.py
lab08/notebooks/: lab02a_lightning.ipynb  lab03_transformers.ipynb  lab08_monitoring.ipynb
lab08/text_recognizer/: paragraph_text_recognizer.py  util.py
lab08/training/: cleanup_artifacts.py  stage_model.py
notebooks/: lab00_overview.ipynb
requirements/: dev-lint.in  dev.in  dev.txt  prod.in  prod.txt
setup/: readme.md
(+26 files in other folders)
